--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ test.html
                       <div class="col-sm-1 prod-banner-item"></div>
                       <div class="col-sm-2 prod-banner-item selected">Products</div>
                       <div class="col-sm-2 prod-banner-item">Events</div>
-                      <div class="col-sm-2 prod-banner-item-logo"><img src="images/logo/logo-The-Cake." alt="Logo" width="100" height="100"></div>
+                      <div class="col-sm-2 prod-banner-item-logo"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
                       <div class="col-sm-2 prod-banner-item"><a href="./AboutUS.html" >About us</a></div>
                       <div class="col-sm-2 prod-banner-item">Contact us</div>
                       <div class="col-sm-1 prod-banner-item"></div>
