--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ test.html
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" href="./style.css ">
+   <link rel="stylesheet" href="css/style.css ">
    <link rel="stylesheet" href="./jquery.js">
 </head>
 <body>
