--- a/index.html
+++ b/index.html
@@ -35,44 +35,104 @@ test.html
 </head>
 <body>
   
-  <div class="row">
-    <div class="rol-sm-12">
-      <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>                        
-            </button>
-          </div> 
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <div id="prod_banner" class="row prod-banner">
-              <div id="prod_menu" class="container fixed-top prod-menu">
-                  <div class="row align-items-center">
-                      <div class="col-sm-1 prod-banner-item"></div>
-                      <div class="col-sm-2 prod-banner-item selected">Products</div>
-                      <div class="col-sm-2 prod-banner-item">Events</div>
-                      <div class="col-sm-2 prod-banner-item-logo"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
-                      <div class="col-sm-2 prod-banner-item"><a href="./AboutUS.html" >About us</a></div>
-                      <div class="col-sm-2 prod-banner-item">Contact us</div>
-                      <div class="col-sm-1 prod-banner-item"></div>
-                  </div>
-                  <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-search gly"></span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
-                  </ul>
-                  <div id="icon">
-                    <h2 id="dis">Discover Sweet Delicious</h2>
-                    <p id="from">From our heart to your special present</p>
-                </div> 
-              </div>
-            </ul>
-           </div>
+  <div id="prod_banner" class="row prod-banner">
+        <div id="prod_menu" class="container fixed-top prod-menu">
+            <div class="row align-items-center">
+                <div class="col-sm-1 prod-banner-item"></div>
+                <div class="col-sm-2 prod-banner-item selected">Products</div>
+                <div class="col-sm-2 prod-banner-item">Events</div>
+                <div class="col-sm-2 prod-banner-item-logo"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
+                <div class="col-sm-2 prod-banner-item">About us</div>
+                <div class="col-sm-2 prod-banner-item">Contact us</div>
+                <div class="col-sm-1 prod-banner-item"></div>
+            </div>
         </div>
-      </nav>
+        <div class="container prod-banner-headline">
+            <div class="row align-items-center justify-content-center prod-banner-title">Discover Sweet Delicious
+            </div>
+            <div class="row align-items-center justify-content-center prod-banner-desc">From our heart to your special present
+            </div>
+        </div>
     </div>
-  </div>
+
+    <div id="prod_slider" class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 prod_slider_suggestion">Our Suggestion</div>
+        </div>
+        <div class="row">
+            <div class="container-fluid">
+                <div id="carousel-example" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
+                            <img src="images/source/cake1.png" class="img-fluid mx-auto d-block" alt="img1">
+                            <div class="prod-item-des">Cake 1
+                                                    <br>28$
+                                                    <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                            
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="images/source/cake2.png" class="img-fluid mx-auto d-block" alt="img2">
+                            <div class="prod-item-des">Cake 1
+                                                    <br>28$
+                                                    <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="images/source/cake3.png" class="img-fluid mx-auto d-block" alt="img3">
+                            <div class="prod-item-des">Cake 1
+                                                    <br>28$
+                                                    <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="images/source/cake4.png" class="img-fluid mx-auto d-block" alt="img4">
+                            <div class="prod-item-des">Cake 1
+                                                    <br>28$
+                                                    <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="images/source/cake5.png" class="img-fluid mx-auto d-block" alt="img5">
+                            <div class="prod-item-des">Cake 1
+                                                    <br>28$
+                                                    <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="images/source/cake1.png" class="img-fluid mx-auto d-block" alt="img6">
+                            <div class="prod-item-des">Cake 1
+                                                  <br>28$
+                                                  <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="images/source/cake2.png" class="img-fluid mx-auto d-block" alt="img7">
+                            <div class="prod-item-des">Cake 1
+                                                    <br>28$
+                                                    <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="images/source/cake3.png" class="img-fluid mx-auto d-block" alt="img8">
+                            <div class="prod-item-des">Cake 1
+                                                    <br>28$
+                                                    <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev prod-slider-button" href="#carousel-example" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next prod-slider-button" href="#carousel-example" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
      
      <div class="story">
       <div class="row sto">
