--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@ test.html
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
    <link rel="stylesheet" href="css/style.css ">
-   <link rel="stylesheet" href="js/jquery.js">
-   <link rel="stylesheet" href="css/product_all.css ">
-   <link rel="stylesheet" href="js/product_all.js">
+   <link rel="stylesheet" href="css/product_all.css "
 </head>
 <body>
   
@@ -335,5 +333,7 @@ test.html
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <!-- Compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/product_all.js"></script>
+<script src="js/jquery.js"></script>
 </body>
 </html>
