--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="prod_menu" class="container fixed-top prod-menu">
             <div class="row align-items-center">
                 <div class="col-sm-1 prod-banner-item"></div>
-                <div class="col-sm-2 prod-banner-item selected">Products</div>
+                <div class="col-sm-2 prod-banner-item">Products</div>
                 <div class="col-sm-2 prod-banner-item">Events</div>
                 <div class="col-sm-2 prod-banner-item-logo"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
                 <div class="col-sm-2 prod-banner-item">About us</div>
