--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
                 <div class="col-sm-2 prod-banner-item">Events</div>
                 <div class="col-sm-2 prod-banner-item-logo"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='about us.html'>About us</div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='about-us.html'>About us</div>
                 <div class="col-sm-2 prod-banner-item">Contact us</div>
                 <div class="col-sm-1 prod-banner-item"></div>
             </div>
