--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="ico/favicon.ico" />
     <link rel="stylesheet" href="./styabout.css ">
     <link rel="stylesheet" href="./framework.css ">
-    <link rel="stylesheet" href="./about-us.css ">
+    <link rel="stylesheet" href="css/about-us.css ">
 </head>
 <body>
   <div class="row">
