--- a/products/mariage.html
+++ b/products/mariage.html
@@ -12,13 +12,12 @@
 
 <body>
     <div id="prod_banner" class="row prod-banner">
-        <div id="prod_menu" class="container fixed-top prod-menu">
-            <div class="row align-items-center">
+        <div class="row align-items-center">
                 <div class="col-sm-1 prod-banner-item"></div>
-                <div class="col-sm-2 prod-banner-item selected">Products</div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
                 <div class="col-sm-2 prod-banner-item">Events</div>
-                <div class="col-sm-2 prod-banner-item-logo"><img src="../images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
-                <div class="col-sm-2 prod-banner-item">About us</div>
+                <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='index.html';"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='about-us.html';">About us</div>
                 <div class="col-sm-2 prod-banner-item">Contact us</div>
                 <div class="col-sm-1 prod-banner-item"></div>
             </div>
