--- a/about-us.html
+++ b/about-us.html
@@ -43,7 +43,7 @@
                       <div class="col-sm-2 prod-banner-item selected">Products</div>
                       <div class="col-sm-2 prod-banner-item">Events</div>
                       <div class="col-sm-2 prod-banner-item-logo"><a href="./test.html"><a herf="./index.html"><img src="./logo-The-Cake.png" alt="Logo" width="100" height="100"></a></div>
-                      <div class="col-sm-2 prod-banner-item"><a href="./AboutUS.html">About us</a></div>
+                      <div class="col-sm-2 prod-banner-item"><a href="./about-us.html">About us</a></div>
                       <div class="col-sm-2 prod-banner-item">Contact us</div>
                       <div class="col-sm-1 prod-banner-item"></div>
                   </div>
