--- a/about-us.html
+++ b/about-us.html
@@ -141,7 +141,7 @@
                   </div>
               <div class="col-md-3 footer-social animated fadeInDown">
                   <h4>LOCATION</h4>
-                  <P>606 Ba Tháng Hai P.14 Q.10 TP.HCM</P>
+                  <P>606 Ba Thang Hai P.14 Q.10 TP.HCM</P>
                   <h4>HOTLINE</h4>
                   <P>0931 138 887 - Ms.Anna</P>
                   
