--- a/about-us.html
+++ b/about-us.html
@@ -85,7 +85,7 @@
     <div class="row a">
       <h1>The Cake Shop Team</h1>
       <div class="rol-xs-6 col col-sm-6">
-        <img id="img1" src="./ows_157987338791780.jpg">
+        <img id="img1" src="images/source/ows_157987338791780.jpg">
       </div>
       <div class="rol-xs-6 col col-sm-6">
         <p >
@@ -106,7 +106,7 @@
         </p>
       </div>
       <div class="rol-xs-6 col col-sm-6">
-        <img id="img1" src="./beptruong.jpg">
+        <img id="img1" src="images/source/beptruong.jpg">
       </div>
     </div>
   </div>
