--- a/products/all.html
+++ b/products/all.html
@@ -76,21 +76,21 @@
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/source/cake1.png" class="img-fluid mx-auto d-block" alt="img6">
+                            <img src="../images/001.png" class="img-fluid mx-auto d-block" alt="img6">
                             <div class="prod-item-des">Cake 1
                                                   <br>28$
                                                   <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/source/cake2.png" class="img-fluid mx-auto d-block" alt="img7">
+                            <img src="../images/002.png" class="img-fluid mx-auto d-block" alt="img7">
                             <div class="prod-item-des">Cake 1
                                                     <br>28$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/source/cake3.png" class="img-fluid mx-auto d-block" alt="img8">
+                            <img src="../images/003.png" class="img-fluid mx-auto d-block" alt="img8">
                             <div class="prod-item-des">Cake 1
                                                     <br>28$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
@@ -127,10 +127,10 @@
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake1.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/004.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake1.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/004.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -143,10 +143,10 @@
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake2.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/005.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake2.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/005.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -159,10 +159,10 @@
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake3.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/006.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake3.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/006.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -175,10 +175,10 @@
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake4.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/007.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake4.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/007.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -189,14 +189,14 @@
             </div>
         </div>
         <div class="row">
-            <!-- Cake 1 -->
+            <!-- Cake 5 -->
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake1.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/008.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake1.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/008.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -205,14 +205,14 @@
                     <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
                 </div>
             </div>
-            <!-- Cake 2 -->
+            <!-- Cake 6 -->
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake2.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/009.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake2.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/009.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -221,14 +221,14 @@
                     <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
                 </div>
             </div>
-            <!-- Cake 3 -->
+            <!-- Cake 7 -->
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake3.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/010.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake3.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/010.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -237,14 +237,14 @@
                     <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html','_blank')">ORDER</button>
                 </div>
             </div>
-            <!-- Cake 4 -->
+            <!-- Cake 8 -->
             <div class="col-sm-3">
                 <div class="shadow-sm p-3 mb-5 bg-white rounded prod-item">
                     <div class="prod-item-img">
-                        <img src="../images/source/cake4.png" alt="Cake1" width="200px" height="200px">
+                        <img src="../images/011.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/source/cake4.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/011.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
@@ -262,44 +262,52 @@
             <li class="page-item"><a class="page-link active" href="all.html/#prod-pagination">1</a></li>
             <li class="page-item"><a class="page-link" href="all-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="all-3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="all-4.html">4</a></li>
+            <li class="page-item"><a class="page-link" href="all-5.html">5</a></li>
+            <li class="page-item"><a class="page-link" href="all-6.html">6</a></li>
             <li class="page-item">
               <a class="page-link" href="all-2.html">Next</a>
             </li>
           </ul>
     </div>
-     <footer class="footer-bs">
-        <div class="row">
+     <!--       Footer      -->
+    <footer class="footer-bs">
+        <div class="container">
+        <div class="row footer">
             <div class="col-md-2 footer-nav animated fadeInUp">
-                <h4>Menu</h4>
-                    <ul class="pages">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">PRODUCTS</a></li>
-                        <li><a href="#">NEWS</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
+                <h4>MENU</h4>
+                <ul class="pages">
+                    
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="#">PRODUCTS</a></li>
+                    <li><a href="#">NEWS</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
             </div>
-                  <div class="col-md-3 footer-nav animated fadeInUp">
-                  <h4>SUPPORT</h4>
-                      <ul class="list">
-                          <li><a href="#">CONTRACT US</a></li>
-                          <li><a href="#">SEND EMAIL</a></li>
-                      </ul>
-                    <h4>Follow Us</h4>
-                    <ul>
-                      <li><a href="#">Facebook</a></li>
-                      <li><a href="#">Twitter</a></li>
-                      <li><a href="#">Instagram</a></li>
-                      <li><a href="#">RSS</a></li>
-                    </ul>
-                  </div>
-              <div class="col-md-3 footer-social animated fadeInDown">
-                  <h4>LOCATION</h4>
-                  <P>606 Ba Tháng Hai P.14 Q.10 TP.HCM</P>
-                  <h4>HOTLINE</h4>
-                  <P>0931 138 887 - Ms.Anna</P>
+            <div class="col-md-3 footer-nav animated fadeInUp">
+                <h4>SUPPORT</h4>
+                <ul class="list">
+                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="#">SEND EMAIL</a></li>
+                </ul>
+                <h4>FOLLOW US</h4>
+                <div class="footer-icon">
+                    <span><img src="../images/logo/icon fb.png" alt="Logo FB" height="30px" width="30px"></span>
+                    <span><img src="../images/logo/icon ins.png" alt="Logo Instagram" height="30px" width="30px"></span>
+                </div>
+            </div>
+            <div class="col-md-3 footer-social animated fadeInUp">
+                <h4>LOCATION</h4>
+                <ul class="list">
+                    <li>606 Ba Thang Hai P.14 Q.10 TP.HCM</li>
+                </ul>
+                <h4>HOTLINE</h4>
+                <ul class="list">
+                    <li>0931 138 887 - Ms.Anna</li>
+                </ul>
                   
-              </div>
+            </div>
                 <div class="col-md-4 footer-ns animated fadeInRight">
                   <h4>LET US KNOW</h4>
                         <div class="input-group mb-3">
@@ -315,7 +323,7 @@
                         <div class="input-group mb-3">
                             <button class="btn btn-default" type="button">Submit<span class="glyphicon glyphicon-envelope"></span></button>
                         </div>
-                </div><!-- /input-group -->                   
+                </div>             
               </div>
           </div>
       </footer>
