--- a/products/all-4.html
+++ b/products/all-4.html
@@ -271,7 +271,7 @@
           </ul>
     </div>
 
-    <!--       Footer      -->
+     <!--       Footer      -->
     <footer class="footer-bs">
         <div class="container">
         <div class="row footer">
@@ -294,8 +294,8 @@
                 </ul>
                 <h4>FOLLOW US</h4>
                 <div class="footer-icon">
-                    <span><img src="images/logo/icon fb.png" alt="Logo FB" height="30px" width="30px"></span>
-                    <span><img src="images/logo/icon ins.png" alt="Logo Instagram" height="30px" width="30px"></span>
+                    <span><img src="../images/logo/icon fb.png" alt="Logo FB" height="30px" width="30px"></span>
+                    <span><img src="../images/logo/icon ins.png" alt="Logo Instagram" height="30px" width="30px"></span>
                 </div>
             </div>
             <div class="col-md-3 footer-social animated fadeInUp">
@@ -324,11 +324,11 @@
                         <div class="input-group mb-3">
                             <button class="btn btn-default" type="button">Submit<span class="glyphicon glyphicon-envelope"></span></button>
                         </div>
-                </div><!-- /input-group -->                   
+                </div>             
               </div>
           </div>
       </footer>
-
+    
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/product_all.js"></script>
