--- a/products/birthday-2.html
+++ b/products/birthday-2.html
@@ -178,7 +178,7 @@
                         <img src="../images/source/cake1.png" alt="Cake1" width="200px" height="200px">
                         <div class="prod-item-desc">
                             <h2>Egg less</h2>
-                            <a href="../images/011.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
+                            <a href="../images/source/cake1.png" target="_blank"><img src="../images/117453.png" width="32" height="32" alt=""></a>
                         </div>
                     </div>
 
