--- a/products/birthday-2.html
+++ b/products/birthday-2.html
@@ -254,14 +254,14 @@
                 </div>
             </div>
         </div>
-
         <ul class="pagination justify-content-center" id="prod-pagination">
+            <li class="page-item"><a class="page-link" href="birthday.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="birthday.html">1</a></li>
             <li class="page-item"><a class="page-link active" href="#">2</a></li>
             <li class="page-item disabled">
                 <a class="page-link" href="#" tabindex="-1">Next</a>
             </li>
-          </ul>
+        </ul>
     </div>
      <!--       Footer      -->
     <footer class="footer-bs">
