--- a/about-us.html
+++ b/about-us.html
@@ -40,12 +40,12 @@
               <div id="prod_menu" class="container fixed-top prod-menu">
                   <div class="row align-items-center">
                       <div class="col-sm-1 prod-banner-item"></div>
-                      <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
-                      <div class="col-sm-2 prod-banner-item">Events</div>
-                      <div class="col-sm-2 prod-banner-item-logo"><a href="index.html"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></a></div>
-                      <div class="col-sm-2 prod-banner-item"><a href="about-us.html">About us</a></div>
-                      <div class="col-sm-2 prod-banner-item">Contact us</div>
-                      <div class="col-sm-1 prod-banner-item"></div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
+                <div class="col-sm-2 prod-banner-item">Events</div>
+                <div class="col-sm-2 prod-banner-item-logo" onclick="window.location='index.html';"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='about-us.html';">About us</div>
+                <div class="col-sm-2 prod-banner-item">Contact us</div>
+                <div class="col-sm-1 prod-banner-item"></div>
                   </div>
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-search gly"></span></a></li>
