--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="row align-items-center">
                 <div class="col-sm-1 prod-banner-item"></div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='event/event.html'>Events</div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='event/event.html';">Events</div>
                 <div class="col-sm-2 prod-banner-item-logo" onclick="window.location='index.html';"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='about-us.html';">About us</div>
                 <div class="col-sm-2 prod-banner-item">Contact us</div>
