--- a/about-us.html
+++ b/about-us.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="assets/css/styles.css" rel="stylesheet" />
-    <link href="assets/color/default.css" rel="stylesheet" /> 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png" />
     <link rel="shortcut icon" href="ico/favicon.ico" />
     <link rel="stylesheet" href="css/about-us.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/product_all.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/product_all.css">
 </head>
 <body>
   <div id="prod_banner" class="row prod-banner">
@@ -22,7 +20,7 @@
         <div class="row align-items-center">
             <div class="col-sm-1 prod-banner-item"></div>
             <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
-            <div class="col-sm-2 prod-banner-item">Events</div>
+            <div class="col-sm-2 prod-banner-item"onclick="window.location='event/event.html';">Events</div>
             <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='index.html';"><img src="../images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
             <div class="col-sm-2 prod-banner-item selected" onclick="window.location='about-us.html';">About us</div>
             <div class="col-sm-2 prod-banner-item">Contact us</div>
@@ -40,7 +38,7 @@
 
   <div class="container">
     <div class="heding">About us</div>
-      <div class="sub-heding">
+      <div class="sub-heding-1">
         
           The Cake Shop was founded by a team of passionate and dedicated bakers who are committed in baking the most delicious 
           cakes and pastries around. Using only the freshest ingredients we can find, you can be sure that you are served the best quality cake you can ever have.
@@ -154,8 +152,8 @@
     </div>
 </footer>
 
-      <script src="../js/jquery.min.js"></script>
-      <script src="../js/bootstrap.min.js"></script>
-      <script src="../js/product_all.js"></script>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/product_all.js"></script>
 </body>
 </html>
