--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div id="prod_menu" class="fixed-top prod-menu">
             <div class="row align-items-center">
                 <div class="col-sm-1 prod-banner-item"></div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='all.html';">Products</div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='../event/event.html';">Events</div>
-                <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='../index.html';"><img src="../images/logo/logo-The-Cake.png" alt="Logo" width="90" height="90"></div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='../about-us.html';">About us</div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='../contact.html';">Contact us</div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='event/event.html';">Events</div>
+                <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='index.html';"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="90" height="90"></div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='about-us.html';">About us</div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='/contact.html';">Contact us</div>
                 <div class="col-sm-1">
                     <i class="fa fa-shopping-basket" id="cart" aria-hidden="true"></i>
                     <div id="myModal" class="modal">
@@ -95,7 +95,7 @@ Bon Appetite!!
                 <div id="carousel-example" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner row w-100 mx-auto" role="listbox">
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
-                            <img src="../images/source/cake1.png" class="img-fluid mx-auto d-block" alt="C1">
+                            <img src="images/source/cake1.png" class="img-fluid mx-auto d-block" alt="C1">
                             <div class="prod-item-des">Tropical Summer
                                                     <br>53$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
@@ -103,49 +103,49 @@ Bon Appetite!!
 
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/source/cake2.png" class="img-fluid mx-auto d-block" alt="C2">
+                            <img src="images/source/cake2.png" class="img-fluid mx-auto d-block" alt="C2">
                             <div class="prod-item-des">Red Fall
                                                     <br>55$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/source/cake3.png" class="img-fluid mx-auto d-block" alt="C3">
+                            <img src="images/source/cake3.png" class="img-fluid mx-auto d-block" alt="C3">
                             <div class="prod-item-des">Mr.Ore0
                                                     <br>54$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/source/cake4.png" class="img-fluid mx-auto d-block" alt="C4">
+                            <img src="images/source/cake4.png" class="img-fluid mx-auto d-block" alt="C4">
                             <div class="prod-item-des">A Little You
                                                     <br>42$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/source/cake5.png" class="img-fluid mx-auto d-block" alt="C5">
+                            <img src="images/source/cake5.png" class="img-fluid mx-auto d-block" alt="C5">
                             <div class="prod-item-des">Miss The Rain
                                                     <br>38$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/001.png" class="img-fluid mx-auto d-block" alt="C6">
+                            <img src="images/001.png" class="img-fluid mx-auto d-block" alt="C6">
                             <div class="prod-item-des">Take My Hand
                                                   <br>67$
                                                   <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/002.png" class="img-fluid mx-auto d-block" alt="C7">
+                            <img src="images/002.png" class="img-fluid mx-auto d-block" alt="C7">
                             <div class="prod-item-des">Simple Love
                                                     <br>47$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
                             </div>
                         </div>
                         <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                            <img src="../images/003.png" class="img-fluid mx-auto d-block" alt="img8">
+                            <img src="images/003.png" class="img-fluid mx-auto d-block" alt="img8">
                             <div class="prod-item-des">Macaron Love
                                                     <br>69$
                                                     <br> <button type="button" class="btn btn-primary button" onclick=" window.open('products/order_form.html','_blank')">ORDER NOW</button>
@@ -255,8 +255,8 @@ Bon Appetite!!
                 </ul>
                 <h4>FOLLOW US</h4>
                 <div class="footer-icon">
-                    <span><a href="Facebook.com/thecake" target="_blank" ><img src="../images/logo/icon fb.png" alt="Logo FB" height="30px" width="30px"></a></span>
-                    <span><a href="instagram.com/thecake" target="_blank" ><img src="../images/logo/icon ins.png" alt="Logo Instagram" height="30px" width="30px"></a></span>
+                    <span><a href="Facebook.com/thecake" target="_blank" ><img src="images/logo/icon fb.png" alt="Logo FB" height="30px" width="30px"></a></span>
+                    <span><a href="instagram.com/thecake" target="_blank" ><img src="images/logo/icon ins.png" alt="Logo Instagram" height="30px" width="30px"></a></span>
                 </div>
             </div>
             <div class="col-md-3 footer-social animated fadeInUp">
