--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The cake</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +21,7 @@
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='event/event.html';">Events</div>
                 <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='index.html';"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="90" height="90"></div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='about-us.html';">About us</div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='/contact.html';">Contact us</div>
+                <div class="col-sm-2 prod-banner-item" onclick="window.location='contact.html';">Contact us</div>
                 <div class="col-sm-1">
                     <i class="fa fa-shopping-basket" id="cart" aria-hidden="true"></i>
                     <div id="myModal" class="modal">
