--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                       </div>                                 
                       <div class="modal-footer">
                           <button type="button" class="btn btn-secondary close-footer">Continue</button>
-                          <button type="button" class="btn btn-primary order">Thanh Toán</button>
+                          <button type="button" class="btn btn-primary order">Pay</button>
                       </div>
                   </div>  
               </div>
