--- a/products/birthday.html
+++ b/products/birthday.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>All Products</title>
+    <title>Birthday Cake</title>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -332,9 +332,9 @@
               <a class="page-link" href="#" tabindex="-1">Previous</a>
             </li>
             <li class="page-item"><a class="page-link active" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="birthday-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="birthday-2.html#prod-items">2</a></li>
             <li class="page-item">
-              <a class="page-link" href="birthday-2.html">Next</a>
+              <a class="page-link" href="birthday-2.html#prod-items">Next</a>
             </li>
           </ul>
     </div>
